# MycRacklet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Jenkinsfile  README  README.md  get_release_info.sh  paper.bib  paper.md
doc/: CMakeLists.txt  cracklet.dox.in
doc/sphinx/source/: conf.py  (+4 more)
examples/: CMakeLists.txt
examples/001_UIUC_AluHoma/: CMakeLists.txt  alu_homa.cc
examples/002_2d_heterog/: CMakeLists.txt  andrews_transition.cc  cst_speed_fracture.cc  cst_speed_fracture_2.cc
examples/003_3d_asperity/: CMakeLists.txt  single_asp_3d.cc
examples/004_crack_front_waves/: CMakeLists.txt  cst_speed_fracture_2d_3d.cc  input_file.cra
examples/005_friction/: CMakeLists.txt  hetero.txt  input_mode_III_new.cra  mode_III_rate_and_state.cc  mode_III_slip_weakening.cc  mode_III_slip_weakening_GL.cc  mode_III_slip_weakening_dual_cohesive.cc  mode_III_slip_weakening_equivalent_GL.cc  mode_III_slip_weakening_exp.cc  mode_III_slip_weakening_fluidpression.cc  mode_III_slip_weakening_friction.cc  mode_III_slip_weakening_linear.cc  mode_III_slip_weakening_linear_checksize.cc  mode_III_slip_weakening_load.cc  mode_III_slip_weakening_load_equivalent.cc  mode_III_slip_weakening_new.cc  mode_III_slip_weakening_new_coulomb.cc  mode_III_slip_weakening_new_input.cc  mode_III_slip_weakening_new_with_load.cc  mode_III_slip_weakening_new_with_load_equivalent.cc  mode_III_slip_weakening_new_with_load_equivalent_increasing.cc  mode_III_slip_weakening_new_with_load_increasing.cc  mode_III_slip_weakening_new_with_load_increasing_2.cc  mode_III_slip_weakening_non_exp.cc  mode_III_slip_weakening_non_uniform_load.cc  mode_III_slip_weakening_non_uniform_load_increasing.cc  mode_III_slip_weakening_nucleation.cc  mode_III_slip_weakening_old.cc  mode_III_slip_weakening_pointload.cc  mode_III_slip_weakening_ref_dual.cc  mode_III_slip_weakening_ref_dual_equivalent.cc  mode_III_slip_weakening_restart.cc  mode_III_slip_weakening_v_const.cc  mode_II_III_3d.cc  mode_II_III_CFL.cc  mode_II_III_dublanchet.cc  mode_II_III_heterogenity.cc  mode_II_rate_and_state.cc  mode_II_slip_weakening.cc  mode_II_slip_weakening_new.cc  (+2 more)
examples/006_viscoelastic/: CMakeLists.txt  input_viscoelastic.cra  viscoelastic.cc
examples/007_rough_surfaces/: CMakeLists.txt  onset_of_sliding.cc  post_process.py
examples/profiling/: CMakeLists.txt  printKernels.cc  size_checking.cc
examples/python/: CMakeLists.txt
python/: .gitignore  CMakeLists.txt  py_cRacklet.cc  py_cohesive_law.cc  py_cohesive_law.hh  py_cohesive_law_viscoelastic.cc  py_cohesive_law_viscoelastic.hh  py_contact_law.cc  py_contact_law.hh  py_coulomb_law.cc  py_coulomb_law.hh  py_crack_profile.cc  py_crack_profile.hh  py_cracklet.cc  py_cracklet.hh  py_data_dumper.cc  py_data_dumper.hh  py_data_register.cc  py_data_register.hh  py_interface_law.cc  py_interface_law.hh  py_interfacer.cc  py_interfacer.hh  py_rate_and_state_law.cc  py_rate_and_state_law.hh  py_regularized_coulomb_law.cc  py_regularized_coulomb_law.hh  py_simulation_driver.cc  py_simulation_driver.hh  py_spectral_model.cc  py_spectral_model.hh
python/cracklet/: __init__.py
sim/: CMakeLists.txt
sim/001_UIUC_AluHoma/: CMakeLists.txt  alu_homa.cc
sim/002_2d_heterog/: CMakeLists.txt  andrews_transition.cc  cst_speed_fracture.cc  cst_speed_homog.cc  striped_interfaces.cc
sim/003_3d_asperity/: CMakeLists.txt  single_asp_3d.cc
sim/004_crack_front_waves/: CMakeLists.txt  cst_speed_fracture_2d_3d.cc  input_file.cra
sim/005_friction/: CMakeLists.txt  mode_III_rate_and_state.cc  mode_III_slip_weakening.cc  mode_II_rate_and_state.cc  mode_II_slip_weakening.cc  travelling_pulse.cc
sim/b003_supershear/: 2d_homogeneous.cc~  3d_stripes.cc~  CMakeLists.txt~
sim/profiling/: CMakeLists.txt  printKernels.cc
src/: CMakeLists.txt  cRacklet_common.hh  circular_buffer.hh  circular_buffer_impl.cc  cohesive_law.cc  cohesive_law.hh  cohesive_law_all.cc  cohesive_law_all.hh  cohesive_law_coulomb.cc  cohesive_law_coulomb.hh  cohesive_law_formulation_coulomb.hh  cohesive_law_formulations.hh  cohesive_law_inline_impl.cc  cohesive_law_inline_impl.hh  cohesive_law_viscoelastic.cc  cohesive_law_viscoelastic.hh  cohesive_law_viscoelastic_formulations.hh  cohesive_law_viscoelastic_inline_impl.cc  cohesive_law_viscoelastic_inline_impl.hh  contact_law.hh  convolution_manager.cc  convolution_manager.hh  convolution_manager_inline_impl.hh  coulomb_law.cc  coulomb_law.hh  crack_profile.cc  crack_profile.hh  data_dumper.cc  data_dumper.hh  data_dumper_inline_impl.cc  data_dumper_inline_impl.hh  data_register.cc  data_register.hh  data_register_inline_impl.cc  data_register_inline_impl.hh  find_stable_alpha.cc  find_stable_alpha.hh  fracture_law.hh  interface_law.hh  interfacer.cc  (+22 more)
tests/: CMakeLists.txt
tests/asperity_3d/: CMakeLists.txt  test_asperity.cc  test_asperity.verified  test_asperity_restart.cc  test_asperity_restart.verified
tests/bima_fract/: CMakeLists.txt  test_bima_fract.cc  test_bima_fract.verified  test_bima_fract_restart.cc  test_bima_fract_restart.verified
tests/bima_fract_3d/: CMakeLists.txt  test_alu_homa3d.cc  test_alu_homa3d.verified  test_alu_homa3d_restart.cc  test_alu_homa3d_restart.verified
tests/cRacklet_engine/: CMakeLists.txt  test_discrete_convolution.cc  test_discrete_convolution.verified  test_discrete_convolution_from_file.cc  test_discrete_convolution_from_file.verified  test_discrete_convolution_from_function.cc  test_discrete_convolution_from_function.verified  test_multimodal_convolution.cc  test_ring_buffer.cc  test_ring_buffer.verified
tests/cst_speed/: CMakeLists.txt  test_constant_speed_writing_space_ctrl.cc  test_constant_speed_writing_space_ctrl.verified  test_constant_speed_writing_time_ctrl.cc  test_constant_speed_writing_time_ctrl.verified
tests/friction/: CMakeLists.txt  test_rate_and_state_PMMA.cc  test_rate_and_state_PMMA.verified  test_rate_and_state_PMMA_regularized.cc  test_rate_and_state_PMMA_regularized.verified
tests/python_interface/: CMakeLists.txt  fixtures.py  test_pybind.py  test_pybind_2d.py  test_pybind_3d.py
(+46 files in other folders)
